# sr-barbara

./: .env.combined  .env.dev.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  about.md  adminer-start.sh  adminer-stop.sh  adniner-stop.sh  app.py  compose.yaml  docker-compose.dev.yml  docker-compose.yaml  download.html  index.html  invite.md  pyproject.toml  signed-page.html  signup.html  sr_barbara.yaml  start.sh  stop.sh  tree.txt
.doc-gen/: check-report.txt  defaults.yml  ignore-patterns.txt  manifest.fletch  manifest.yml
.doc-gen/manifest-backups/: 20260427-160129-manifest.yml  20260502-202851-manifest.yml  20260503-210712-manifest.yml
.doc-gen/output/: .env.dev.example.md  .env.example.md  .gitignore.md  Dockerfile.md  LICENSE.md  README.md.md  adminer-start.sh.md  adminer-stop.sh.md  app.py.md  docker-compose.dev.yml.md  docker-compose.yaml.md  project-tree.txt  pyproject.toml.md  sr_barbara.yaml.md  start.sh.md  stop.sh.md
.doc-gen/output/data/: game_config.schema.json.md  game_config.yaml.md  queries.yaml.md  sentences.schema.json.md  sentences.yaml.md
.doc-gen/output/db/: dropall.sql.md  erDiagram.mmd.md  (+6 more)
.github/workflows/: release.yml
data/: game_config.schema.json  game_config.yaml  help.yaml  queries.yaml  sentences.schema.json  sentences.yaml
db/: dropall.sql  erDiagram.mmd  reset.sql  schema.md  schema.sql  seed.sql  sentence_view.sql  truncate.sql
docs/: dev.to.md  dev_submission.md  notes.md  queries.md  roadmap 2026-02-27 22.41.39.md  roadmap.md  tree.txt
docs/changedocs/: game-js-pp-fix.md  reorganize.sh  sr-barbara-article-to-determiner.md  sr-barbara-build-game.md  sr-barbara-css-js-pos-update.md  sr-barbara-docker-changes.md  sr-barbara-docker-scripts.md  sr-barbara-help-content.md  sr-barbara-main-scoping-fix.md  sr-barbara-module-split.md  sr-barbara-site-url.md  sr-barbara-solve-btn-hide.md  sr-barbara-volume-mount.md
docs/design/: handoff-2026-04-28.md  handoff-2026-04-30.md  handoff-2026-05-01.md  handoff-2026-05-03.md  handoff-2026-05-03b.md  roadmap.md  sr-barbara-game-config.md  sr-barbara-phrase-highlight.md  sr-barbara-release-workflow.md  sr-barbara-schema-analysis.md  sr-barbara-update-checker.md
docs/roadmap/: roadmap.md
scripts/: run_local.sh  setup.py
sr_barbara.egg-info/: PKG-INFO  SOURCES.txt
static/css/: style.css
static/images/: cfb-sign.b64
static/js/: config.js  data.js  game.js  layout.js  main.js  renderer.js  ui.js
templates/: index.html  index.standalone.html
(+47 files in other folders)
